update user mgt
