# src/routes/auth.routes.ts
@@ -6,6 +6,7 @@ import UtilsService from "../services/Utils.service";
 const authRouter = Router();
 
 authRouter.post("/new", UtilsService.authentication, UtilsService.adminAuthorization, AuthCtrl.newUser);
+authRouter.post("/request", AuthCtrl.newUser);
 authRouter.post("/login", AuthCtrl.login);
 authRouter.get("/me", UtilsService.authentication, AuthCtrl.profile);
 authRouter.put("/update-password", UtilsService.authentication, AuthCtrl.updatePassword);
